--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BtkFloresta</title>
     
     <!-- Favicon -->
-    <link rel="icon" href="Icone2.jpg" type="image/jpeg">
+    <link rel="icon" href="src/Icone2.jpg" type="image/jpeg">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -89,11 +89,9 @@
 </head>
 <body>
 
-	//fade-in fade-right zoom-in fade-up
-
     <header id="inicio">
-        <img src="Icone.jpeg" alt="BTK Floresta Porto Alegre">
-        <a href="#inscricao" class="btn-custom">Inscreva-se</a>
+        <img src="src/Icone.jpeg" alt="BTK Floresta Porto Alegre">
+        <!-- <a href="#inscricao" class="btn-custom">Inscreva-se</a> -->
     </header>
 
     <section id="proxima-aula" class="section-dark" data-aos="fade-up">
@@ -102,15 +100,14 @@
     </section>
 
     <section id="historia" class="section-light" data-aos="fade-up">
-        <h2>História do Muay Thai</h2>
-        <p>O Muay Thai, também conhecido como a "arte das oito armas", é uma arte marcial tradicional da Tailândia que utiliza socos, chutes, cotoveladas e joelhadas. Sua origem remonta a mais de mil anos, e é reconhecido por sua eficácia em combate e excelente condicionamento físico.</p>
-        <img src="https://your-image-url.com/muaythai-history.jpg" alt="História do Muay Thai" class="img-fluid mt-4">
+        <h2>História do BTK</h2>
+        <p>Nem eu sei, tem só louco</p>
     </section>
 
     <section id="depoimentos" class="section-light" data-aos="fade-up">
         <h2>Depoimentos de Alunos</h2>
         <p>"Treinar na Academia Muay Thai foi uma das melhores decisões da minha vida. O ambiente é acolhedor e os instrutores são extremamente dedicados."</p>
-        <p>"Treinar na Academia Muay Thai foi uma das melhores decisões da minha vida. O ambiente é acolhedor e os instrutores são extremamente dedicados."</p>
+        <p>"Vem para BTK, Bang nao vale apena"</p>
     </section>
 
     <section id="galeria" class="section-dark" data-aos="zoom-in">
@@ -123,6 +120,7 @@
     <section id="inscricao" class="section-light" data-aos="fade-up">
         <h2>Inscreva-se Agora</h2>
         <p>Preencha o formulário abaixo e comece sua jornada no Muay Thai hoje mesmo!</p>
+	<p>Venha apanhar no sparring hoje mesmo!</p>
         <div class="container mt-4">
             <form>
                 <div class="row justify-content-center">
@@ -142,6 +140,7 @@
             </form>
         </div>
     </section>
+<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
     <footer>
         <p>&copy; 2024 BTK Floresta Porto Alegre. Todos os direitos reservados.</p>
@@ -149,6 +148,7 @@
             <a href="https://instagram.com/btkfloresta" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://youtube.com/@BTKFloresta" target="_blank"><i class="bi bi-youtube"></i></a>
         </div>
+	<img src="src/under_construction.gif" alt="Under Construction Pikachu" style="width: 2%;">
         <p class="mt-3"><a href="#inicio" class="text-white text-decoration-none">Voltar ao topo</a></p>
     </footer>
 
