--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
             </form>
         </div>
     </section>
-<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
     <footer>
         <p>&copy; 2024 BTK Floresta Porto Alegre. Todos os direitos reservados.</p>
@@ -148,7 +147,8 @@
             <a href="https://instagram.com/btkfloresta" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://youtube.com/@BTKFloresta" target="_blank"><i class="bi bi-youtube"></i></a>
         </div>
-	<img src="src/under_construction.gif" alt="Under Construction Pikachu" style="width: 2%;">
+	<img class="img-fluid w-25 w-md-25 w-lg-25" src="src/under_construction.gif" alt="Under Construction Pikachu"
+style="width: 10%; max-width: 50px;">
         <p class="mt-3"><a href="#inicio" class="text-white text-decoration-none">Voltar ao topo</a></p>
     </footer>
 
