--- a/index.html
+++ b/index.html
@@ -141,16 +141,20 @@
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2024 BTK Floresta Porto Alegre. Todos os direitos reservados.</p>
-        <div class="social-icons mt-3">
-            <a href="https://instagram.com/btkfloresta" target="_blank"><i class="bi bi-instagram"></i></a>
-            <a href="https://youtube.com/@BTKFloresta" target="_blank"><i class="bi bi-youtube"></i></a>
-        </div>
-	<img class="img-fluid w-25 w-md-25 w-lg-25" src="src/under_construction.gif" alt="Under Construction Pikachu"
-style="width: 10%; max-width: 50px;">
-        <p class="mt-3"><a href="#inicio" class="text-white text-decoration-none">Voltar ao topo</a></p>
-    </footer>
+    <footer class="text-center p-3 bg-dark text-white">
+    <p class="mb-1">&copy; 2025 BTK Floresta Porto Alegre.</p>
+    <p class="mb-3">Todos os direitos reservados.</p>
+    <div class="social-icons mb-3">
+        <a href="https://instagram.com/btkfloresta" target="_blank" class="me-3 d-inline text-decoration-none">
+            <i class="bi bi-instagram"></i>
+        </a>
+        <a href="https://youtube.com/@BTKFloresta" target="_blank" class="d-inline text-decoration-none">
+            <i class="bi bi-youtube"></i>
+        </a>
+    </div>
+    <img class="img-fluid mb-3" src="src/under_construction.gif" alt="Under Construction Pikachu" style="width: 10%; max-width: 50px;">
+    <p><a href="#inicio" class="text-white text-decoration-none">Voltar ao topo</a></p>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
