--- a/index.html
+++ b/index.html
@@ -96,10 +96,11 @@
     <section id="historia" class="section-light" data-aos="fade-up">
 	<div class="row justify-content-center">
         <div class="col-md-4 text-start">
-  	      	    <h2>Academia de Muaythai e Boxe é BtkFloresta</h2>
-<p>A Versus Fight Club foi fundada em setembro de 2024.</p>
+  	      	    <h2>Academia de Muaythai e Boxe é Btk-Floresta</h2>
+<p>A Btk-Floresta foi fundada em setembro de 2024.</p>
 <p>Contamos com professores de alto nível para treinamento de alunos recreativos e treinamento de atletas de competição.</p>
 <p> Academia de Muaythai, Academia de Boxe.</p>
+<img src="src/btkin.jpg" class="d-block w-100" alt="Imagem 2" class="img-fluid" data-aos="fade-right">
         </div>
         <div class="col-md-4">
             <img src="src/fotoBtk.jpg" class="d-block w-100" alt="Imagem 2" class="img-fluid" data-aos="fade-left">
@@ -121,7 +122,7 @@
 </div>
     </section>
 
-    <section id="galeria" class="section-dark" data-aos="zoom-in">
+    <section id="galeria" class="section-light" data-aos="zoom-in">
         <h2>Galeria de Imagens</h2>
         <div class="container">
             <div class="row">
@@ -132,7 +133,7 @@
         </div>
     </section>
 
-    <section id="inscricao" class="section-light" data-aos="fade-up">
+    <section id="inscricao" class="section-dark" data-aos="fade-down">
         <h2>Inscreva-se Agora</h2>
         <p>Preencha o formulário abaixo e comece sua jornada no Muay Thai hoje mesmo!</p>
         <div class="container mt-4">
