ajustes tela inicial

--- a/index.html
+++ b/index.html
@@ -85,9 +85,45 @@
         footer .social-icons a:hover {
             color: #dc3545;
         }
+
+/* Botão Neon */
+.btnVerde {
+    margin-top: 100px;
+    display: inline-block;
+    padding: 25px 150px;
+    background-color: #54fc2c; /* Cor verde neon */
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 1.5rem;
+    border-radius: 40px; /* Deixa o botão bem arredondado */
+    transition: all 0.3s ease;
+}
+
+
     </style>
 </head>
 <body>
+
+   <section id="historia" data-aos="fade-up">
+	<div class="row justify-content-center">
+        <div class="col-md-5 text-start" style="margin-top: 10%;">
+
+	    <div class="logo">
+<img src="src/Icone.jpeg" style="width: 5%;"> 
+@btkfloresta 
+</div>
+
+
+            <h1>BTK Floresta</h1>
+            <p>Centro de treinamento de luta<br>Muaythai | Boxe | Kickboxing</p>
+            <a href="#saiba-mais" class="btnVerde">SAIBA MAIS</a>
+        </div>
+        <div class="col-md-4">
+            <img src="src/inicioIcone.png" class="d-block w-100" alt="Imagem 2" class="img-fluid" data-aos="fade-left">
+        </div>
+</div>
+    </section>
 
     <header id="inicio">
         <img src="src/Icone.jpeg" alt="BTK Floresta Porto Alegre">
