--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BtkFloresta</title>
+    <meta property="og:title" content="BtkFloresta">
+    <title>Btk Floresta</title>
     
     <!-- Favicon -->
     <link rel="icon" href="src/Icone2.jpg" type="image/jpeg">
@@ -97,7 +98,7 @@
 	<div class="row justify-content-center">
         <div class="col-md-4 text-start">
   	      	    <h2>Academia de Muaythai e Boxe é Btk-Floresta</h2>
-<p>A Btk-Floresta foi fundada em setembro de 2024.</p>
+<p>A Btk-Floresta foi fundada em janeiro de 2021.</p>
 <p>Contamos com professores de alto nível para treinamento de alunos recreativos e treinamento de atletas de competição.</p>
 <p> Academia de Muaythai, Academia de Boxe.</p>
 <img src="src/btkin.jpg" class="d-block w-100" alt="Imagem 2" class="img-fluid" data-aos="fade-right">
@@ -187,15 +188,15 @@
         function verificarHorario() {
             const agora = new Date();
             const horarios = [
-                { inicio: '06:00', fim: '07:30' },
-                { inicio: '08:00', fim: '09:30' },
-                { inicio: '10:00', fim: '11:30' },
-                { inicio: '12:30', fim: '14:00' },
-                { inicio: '14:30', fim: '16:00' },
-                { inicio: '16:30', fim: '18:00' },
-                { inicio: '18:30', fim: '20:00' },
-                { inicio: '20:30', fim: '22:00' },
-                { inicio: '22:30', fim: '00:00' }
+                { inicio: '06:00', fim: '07:20' },
+                { inicio: '07:30', fim: '08:50' },
+                { inicio: '09:00', fim: '10:20' },
+                { inicio: '10:15', fim: '11:35' },
+                { inicio: '12:00', fim: '13:20' },
+                { inicio: '15:00', fim: '16:20' },
+                { inicio: '16:00', fim: '17:20' },
+                { inicio: '17:30', fim: '18:50' },
+                { inicio: '19:00', fim: '20:20' }
             ];
 
             let aulaAtual = null;
