--- a/index.html
+++ b/index.html
@@ -6,19 +6,43 @@
     <meta property="og:title" content="BtkFloresta" />
     <title>BTK Floresta - Muay Thai e Boxe - Porto Alegre</title>
 
-    <meta name="description" content="BTK Floresta: Academia de Muay Thai e Boxe em Porto Alegre. Treinamentos para iniciantes e atletas com professores experientes." />
-    <meta name="keywords" content="Muay Thai, Boxe, Academia, Porto Alegre, Treinamento, Artes Marciais" />
+    <meta
+      name="description"
+      content="BTK Floresta: Academia de Muay Thai e Boxe em Porto Alegre. Treinamentos para iniciantes e atletas com professores experientes."
+    />
+    <meta
+      name="keywords"
+      content="Muay Thai, Boxe, Academia, Porto Alegre, Treinamento, Artes Marciais"
+    />
 
-    <meta property="og:title" content="BTK Floresta - Academia de Muay Thai e Boxe" />
-    <meta property="og:description" content="Treinamentos para todos os níveis com professores experientes em Porto Alegre." />
-    <meta property="og:image" content="https://btkfloresta.com/src/assets/images/Icone.jpeg" />
+    <meta
+      property="og:title"
+      content="BTK Floresta - Academia de Muay Thai e Boxe"
+    />
+    <meta
+      property="og:description"
+      content="Treinamentos para todos os níveis com professores experientes em Porto Alegre."
+    />
+    <meta
+      property="og:image"
+      content="https://btkfloresta.com/src/assets/images/Icone.jpeg"
+    />
     <meta property="og:url" content="https://btkfloresta.com" />
     <meta property="og:type" content="website" />
-	
+
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BTK Floresta - Academia de Muay Thai e Boxe" />
-    <meta name="twitter:description" content="Treinamentos para todos os níveis com professores experientes em Porto Alegre." />
-    <meta name="twitter:image" content="https://btkfloresta.com/src/assets/images/Icone.jpeg" />
+    <meta
+      name="twitter:title"
+      content="BTK Floresta - Academia de Muay Thai e Boxe"
+    />
+    <meta
+      name="twitter:description"
+      content="Treinamentos para todos os níveis com professores experientes em Porto Alegre."
+    />
+    <meta
+      name="twitter:image"
+      content="https://btkfloresta.com/src/assets/images/Icone.jpeg"
+    />
 
     <!-- Favicon -->
     <link rel="icon" href="src/assets/images/Icone2.jpg" type="image/jpeg" />
@@ -166,6 +190,24 @@
           </div>
         </form>
       </div>
+    </section>
+
+    <section id="como-chegar" class="section-dark row justify-content-center gap-5" data-aos="fade-down">
+        <div class="col-md-5 col-sm-12 gap-3">
+          <h2>Como Chegar</h2>
+          <a class="btn btn-bd-primary" href="https://maps.app.goo.gl/EAuVW1xHqA6LJRTE8">COMO CHEGAR</a>
+        </div>
+        <div class="col-md-5 col-sm-12">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3454.463043174285!2d-51.215013324059996!3d-30.023570930309532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9519797d1e88a881%3A0x471a79fff0027bcc!2sBTK%20Floresta!5e0!3m2!1spt-BR!2sbr!4v1738869390334!5m2!1spt-BR!2sbr"
+            width="100%"
+            height="450"
+            style="border: 0; max-width: 600px;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
     </section>
 
     <section id="proxima-aula" class="section-dark" data-aos="fade-down">
