Ajuste sobre-nos

--- a/index.html
+++ b/index.html
@@ -4,21 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="BtkFloresta" />
+
     <title>BTK Floresta - Muay Thai e Boxe - Porto Alegre</title>
 
-    <meta name="description" content="BTK Floresta: Academia de Muay Thai e Boxe em Porto Alegre. Treinamentos para iniciantes e atletas com professores experientes." />
-    <meta name="keywords" content="Muay Thai, Boxe, Academia, Porto Alegre, Treinamento, Artes Marciais" />
-
-    <meta property="og:title" content="BTK Floresta - Academia de Muay Thai e Boxe" />
-    <meta property="og:description" content="Treinamentos para todos os níveis com professores experientes em Porto Alegre." />
-    <meta property="og:image" content="https://btkfloresta.com/src/assets/images/Icone.jpeg" />
+    <meta
+      name="description"
+      content="BTK Floresta: Academia de Muay Thai e Boxe em Porto Alegre. Treinamentos para iniciantes e atletas com professores experientes."
+    />
+    <meta
+      name="keywords"
+      content="Muay Thai, Boxe, Academia, Porto Alegre, Treinamento, Artes Marciais"
+    />
+    <meta
+      property="og:title"
+      content="BTK Floresta - Academia de Muay Thai e Boxe"
+    />
+    <meta
+      property="og:description"
+      content="Treinamentos para todos os níveis com professores experientes em Porto Alegre."
+    />
+    <meta
+      property="og:image"
+      content="https://btkfloresta.com/src/assets/images/Icone.jpeg"
+    />
     <meta property="og:url" content="https://btkfloresta.com" />
     <meta property="og:type" content="website" />
-	
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BTK Floresta - Academia de Muay Thai e Boxe" />
-    <meta name="twitter:description" content="Treinamentos para todos os níveis com professores experientes em Porto Alegre." />
-    <meta name="twitter:image" content="https://btkfloresta.com/src/assets/images/Icone.jpeg" />
+    <meta
+      name="twitter:title"
+      content="BTK Floresta - Academia de Muay Thai e Boxe"
+    />
+    <meta
+      name="twitter:description"
+      content="Treinamentos para todos os níveis com professores experientes em Porto Alegre."
+    />
+    <meta
+      name="twitter:image"
+      content="https://btkfloresta.com/src/assets/images/Icone.jpeg"
+    />
 
     <!-- Favicon -->
     <link rel="icon" href="src/assets/images/Icone2.jpg" type="image/jpeg" />
@@ -34,15 +57,21 @@
     />
     <link rel="stylesheet" href="src/css/main.css" />
   </head>
+
   <body>
     <header id="inicio">
       <img src="src/assets/images/Icone.jpeg" alt="BTK Floresta Porto Alegre" />
     </header>
 
-    <section id="historia" class="section-light" data-aos="fade-up">
-      <div class="row justify-content-center">
+    <section id="sobre-nos" class="section-light" data-aos="fade-up">
+      <div class="row justify-content-center font-branca">
+        <div class="col-md-8 text-start">
+          <h2 class="font-verde titulo-secao">Sobre nós</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center font-branca">
         <div class="col-md-4 text-start">
-          <h2>Academia de Muaythai e Boxe é Btk-Floresta</h2>
+          <h3>Academia de Muaythai e Boxe é Btk-Floresta</h3>
           <p>A Btk-Floresta foi fundada em janeiro de 2021.</p>
           <p>
             Contamos com professores de alto nível para treinamento de alunos
@@ -206,9 +235,9 @@
         style="width: 10%; max-width: 50px"
       />
       <p>
-        <a href="#inicio" class="text-white text-decoration-none"
-          >Voltar ao topo</a
-        >
+        <a href="#inicio" class="text-white text-decoration-none">
+          Voltar ao topo
+        </a>
       </p>
     </footer>
 
