--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
     </section>
 
     <section id="horarios" class="section-dark" data-aos="fade-up">
+      <div class="row justify-content-center font-branca">
+        <div class="col-md-8 text-start">
+          <h2 class="font-verde titulo-secao">Horários</h2>
+        </div>
+      </div>
       <div class="row justify-content-center">
         <div class="col-md-4 text-center">
           <img
@@ -110,7 +115,7 @@
       </div>
     </section>
 
-    <section id="historia" class="section-light" data-aos="fade-up">
+    <section hidden id="historia" class="section-light" data-aos="fade-up">
       <h2>Treinadores</h2>
       <div class="row justify-content-center">
         <div class="col-md-4 text-center">
@@ -137,7 +142,7 @@
     </section>
 
     <section id="galeria" class="section-dark" data-aos="zoom-in">
-      <h2>Galeria de Imagens</h2>
+      <h2 hidden>Galeria de Imagens</h2>
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -154,7 +159,7 @@
       </div>
     </section>
 
-    <section id="inscricao" class="section-light" data-aos="fade-down">
+    <section hidden id="inscricao" class="section-light" data-aos="fade-down">
       <h2>Inscreva-se Agora</h2>
       <p>
         Preencha o formulário abaixo e comece sua jornada no Muay Thai hoje
