--- a/index.html
+++ b/index.html
@@ -98,24 +98,11 @@
       </div>
     </section>
 
-    <section id="horarios" class="section-dark" data-aos="fade-up">
-      <div class="row justify-content-center font-branca">
-        <div class="col-md-8 text-start">
-          <h2 class="font-verde titulo-secao">Horários</h2>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-md-4 text-center">
-          <img
-            src="src/assets/images/tabela.jpeg"
-            alt="Horarios"
-            class="d-block w-100 w-sm-50 w-md-40 w-lg-50"
-          />
-        </div>
-      </div>
-    </section>
-
-    <section hidden id="historia" class="section-light" data-aos="fade-up">
+    <section
+      id="treinadores"
+      class="section-dark font-verde"
+      data-aos="fade-up"
+    >
       <h2>Treinadores</h2>
       <div class="row justify-content-center">
         <div class="col-md-4 text-center">
@@ -141,20 +128,19 @@
       </div>
     </section>
 
-    <section id="galeria" class="section-dark" data-aos="zoom-in">
-      <h2 hidden>Galeria de Imagens</h2>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <iframe
-              class="d-block w-100"
-              src="https://www.instagram.com/btkfloresta/embed"
-              frameborder="0"
-              allowtransparency="true"
-              allowfullscreen="true"
-              style="height: 50vh"
-            ></iframe>
-          </div>
+    <section id="horarios" class="section-dark" data-aos="fade-up">
+      <div class="row justify-content-center font-branca">
+        <div class="col-md-8 text-start">
+          <h2 class="font-verde titulo-secao">Horários</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 text-center">
+          <img
+            src="src/assets/images/tabela.jpeg"
+            alt="Horarios"
+            class="d-block w-100 w-sm-50 w-md-40 w-lg-50"
+          />
         </div>
       </div>
     </section>
@@ -207,44 +193,109 @@
       <p id="proximaAula" class="display-4"></p>
     </section>
 
-    <footer class="text-center p-3 bg-dark text-white">
-      <p class="mb-1">&copy; 2025 BTK Floresta Porto Alegre.</p>
-      <p class="mb-3">Todos os direitos reservados.</p>
-      <div class="social-icons mb-3">
-        <a
-          href="https://instagram.com/btkfloresta"
-          target="_blank"
-          class="me-3 d-inline text-decoration-none"
-        >
-          <i class="bi bi-instagram"></i>
-        </a>
-        <a
-          href="https://youtube.com/@BTKFloresta"
-          target="_blank"
-          class="d-inline text-decoration-none"
-        >
-          <i class="bi bi-youtube"></i>
-        </a>
-        <a
-          href="https://www.tiktok.com/@btkfloresta"
-          target="_blank"
-          class="d-inline text-decoration-none"
-        >
-          <i class="bi bi-tiktok"></i>
-        </a>
+    <section id="sessao-final" class="section-dark" data-aos="fade-up">
+      <div class="container contact-container">
+        <div class="row justify-content-center">
+          <div class="col-md-4 text-center text-md-start">
+            <!-- Telefone -->
+            <h2 class="contact-title">Fale conosco</h2>
+            <p class="contact-info">
+              <strong>TELEFONE:</strong> (51) 00000-0000
+            </p>
+
+            <!-- E-mail -->
+            <p class="contact-info">
+              <strong>E-MAIL:</strong> Btkfloresta@gmail.com
+            </p>
+
+            <!-- Redes Sociais -->
+            <div class="social-icons contact-info">
+              <h3>SOCIAL:</h3>
+              <a
+                href="https://instagram.com/btkfloresta"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <i class="bi bi-instagram"></i>
+              </a>
+              <a
+                href="https://youtube.com/@BTKFloresta"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <i class="bi bi-youtube"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@btkfloresta"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <i class="bi bi-tiktok"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <iframe
+              class="d-block w-100"
+              src="https://www.instagram.com/btkfloresta/embed"
+              frameborder="0"
+              allowtransparency="true"
+              allowfullscreen="true"
+              style="height: 50vh"
+            ></iframe>
+          </div>
+        </div>
       </div>
-      <img
-        class="img-fluid mb-3"
-        src="src/assets/images/under_construction.gif"
-        alt="Under Construction Pikachu"
-        style="width: 10%; max-width: 50px"
-      />
-      <p>
-        <a href="#inicio" class="text-white text-decoration-none">
-          Voltar ao topo
-        </a>
-      </p>
-    </footer>
+    </section>
+
+    <section hidden id="avaliacoes" class="section-light">
+      <div class="container">
+        <h2 class="text-center mb-5">Avaliações dos Alunos</h2>
+        <div class="row justify-content-center">
+          <!-- Avaliação 1 -->
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <p class="card-text">
+                  "Depoimentos são frases curtas das pessoas que gostam da sua
+                  marca. É uma ótima forma de convencer o público a experimentar
+                  seus serviços."
+                </p>
+                <h5 class="card-title">Francine, Assistente Virtual</h5>
+              </div>
+            </div>
+          </div>
+
+          <!-- Avaliação 2 -->
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <p class="card-text">
+                  "Depoimentos são frases curtas das pessoas que gostam da sua
+                  marca. É uma ótima forma de convencer o público a experimentar
+                  seus serviços."
+                </p>
+                <h5 class="card-title">David, Analista de Negócios</h5>
+              </div>
+            </div>
+          </div>
+
+          <!-- Avaliação 3 -->
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <p class="card-text">
+                  "Depoimentos são frases curtas das pessoas que gostam da sua
+                  marca. É uma ótima forma de convencer o público a experimentar
+                  seus serviços."
+                </p>
+                <h5 class="card-title">Bruna, Especialista em Marketing</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
