--- a/index.html
+++ b/index.html
@@ -188,15 +188,83 @@
       </div>
     </section>
 
-    <section id="proxima-aula" class="section-dark" data-aos="fade-down">
+    <section id="proxima-aula" class="section-dark" data-aos="fade-up">
       <h2 id="status-aula">Horário das Aulas</h2>
       <p id="proximaAula" class="display-4"></p>
     </section>
 
+    <section class="avaliacoes-section">
+      <h2>Avaliações dos alunos</h2>
+      
+      <!-- Versão para Desktop -->
+      <div class="container desktop-view">
+          <div class="row justify-content-center">
+              <div class="col-md-4 d-flex justify-content-center">
+                  <div class="avaliacao-box">
+                      <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
+                      <strong>Francine, Assistente Virtual</strong>
+                  </div>
+              </div>
+              <div class="col-md-4 d-flex justify-content-center">
+                  <div class="avaliacao-box">
+                      <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
+                      <strong>David, Analista de Negócios</strong>
+                  </div>
+              </div>
+              <div class="col-md-4 d-flex justify-content-center">
+                  <div class="avaliacao-box">
+                      <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
+                      <strong>Bruna, Especialista em Marketing</strong>
+                  </div>
+              </div>
+          </div>
+      </div>
+      
+      <!-- Versão para Mobile -->
+      <div id="avaliacoesCarousel" class="carousel slide mobile-view" data-bs-ride="carousel">
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <div class="d-flex justify-content-center">
+                      <div class="avaliacao-box">
+                          <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
+                          <strong>Francine, Assistente Virtual</strong>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="d-flex justify-content-center">
+                      <div class="avaliacao-box">
+                          <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
+                          <strong>David, Analista de Negócios</strong>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="d-flex justify-content-center">
+                      <div class="avaliacao-box">
+                          <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
+                          <strong>Bruna, Especialista em Marketing</strong>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#avaliacoesCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Anterior</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#avaliacoesCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Próximo</span>
+          </button>
+      </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <section id="sessao-final" class="section-dark" data-aos="fade-up">
       <div class="container contact-container">
         <div class="row justify-content-center">
-          <div class="col-md-4 text-center text-md-start">
+          <div class="col-md-4 text-center text-md-start" data-aos="fade-right">
             <!-- Telefone -->
             <h2 class="contact-title">Fale conosco</h2>
             <p class="contact-info">
@@ -234,7 +302,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8" data-aos="fade-left">
             <iframe
               class="d-block w-100"
               src="https://www.instagram.com/btkfloresta/embed"
@@ -243,55 +311,6 @@
               allowfullscreen="true"
               style="height: 50vh"
             ></iframe>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section hidden id="avaliacoes" class="section-light">
-      <div class="container">
-        <h2 class="text-center mb-5">Avaliações dos Alunos</h2>
-        <div class="row justify-content-center">
-          <!-- Avaliação 1 -->
-          <div class="col-md-4 mb-4">
-            <div class="card h-100">
-              <div class="card-body">
-                <p class="card-text">
-                  "Depoimentos são frases curtas das pessoas que gostam da sua
-                  marca. É uma ótima forma de convencer o público a experimentar
-                  seus serviços."
-                </p>
-                <h5 class="card-title">Francine, Assistente Virtual</h5>
-              </div>
-            </div>
-          </div>
-
-          <!-- Avaliação 2 -->
-          <div class="col-md-4 mb-4">
-            <div class="card h-100">
-              <div class="card-body">
-                <p class="card-text">
-                  "Depoimentos são frases curtas das pessoas que gostam da sua
-                  marca. É uma ótima forma de convencer o público a experimentar
-                  seus serviços."
-                </p>
-                <h5 class="card-title">David, Analista de Negócios</h5>
-              </div>
-            </div>
-          </div>
-
-          <!-- Avaliação 3 -->
-          <div class="col-md-4 mb-4">
-            <div class="card h-100">
-              <div class="card-body">
-                <p class="card-text">
-                  "Depoimentos são frases curtas das pessoas que gostam da sua
-                  marca. É uma ótima forma de convencer o público a experimentar
-                  seus serviços."
-                </p>
-                <h5 class="card-title">Bruna, Especialista em Marketing</h5>
-              </div>
-            </div>
           </div>
         </div>
       </div>
