--- a/index.html
+++ b/index.html
@@ -193,73 +193,136 @@
       <p id="proximaAula" class="display-4"></p>
     </section>
 
-    <section class="avaliacoes-section">
+    <section id="como-chegar" class="section-light" data-aos="fade-up">
+      <div class="row justify-content-center font-branca">
+        <div class="col-md-8 text-start">
+          <h2 class="font-verde titulo-secao">COMO CHEGAR</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center font-branca">
+        <div class="col-md-4 text-start">
+          <h3>Academia de Muaythai e Boxe é Btk-Floresta</h3>
+          <p>A Btk-Floresta foi fundada em janeiro de 2021.</p>
+        </div>
+        <div class="col-md-4">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3454.4628804703993!2d-51.212438399999996!3d-30.023575599999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9519797d1e88a881%3A0x471a79fff0027bcc!2sBTK%20Floresta!5e0!3m2!1sen!2sbr!4v1739500719312!5m2!1sen!2sbr"
+            width="500"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
+    </section>
+
+    <section class="avaliacoes-section" data-aos="fade-up">
       <h2>Avaliações dos alunos</h2>
-      
+
       <!-- Versão para Desktop -->
       <div class="container desktop-view">
-          <div class="row justify-content-center">
-              <div class="col-md-4 d-flex justify-content-center">
-                  <div class="avaliacao-box">
-                      <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
-                      <strong>Francine, Assistente Virtual</strong>
-                  </div>
-              </div>
-              <div class="col-md-4 d-flex justify-content-center">
-                  <div class="avaliacao-box">
-                      <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
-                      <strong>David, Analista de Negócios</strong>
-                  </div>
-              </div>
-              <div class="col-md-4 d-flex justify-content-center">
-                  <div class="avaliacao-box">
-                      <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
-                      <strong>Bruna, Especialista em Marketing</strong>
-                  </div>
-              </div>
+        <div class="row justify-content-center">
+          <div class="col-md-4 d-flex justify-content-center">
+            <div class="avaliacao-box">
+              <p>
+                Depoimentos são frases curtas das pessoas que gostam da sua
+                marca. É uma ótima forma de convencer o público a experimentar
+                seus serviços.
+              </p>
+              <strong>Francine, Assistente Virtual</strong>
+            </div>
           </div>
-      </div>
-      
-      <!-- Versão para Mobile -->
-      <div id="avaliacoesCarousel" class="carousel slide mobile-view" data-bs-ride="carousel">
-          <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <div class="d-flex justify-content-center">
-                      <div class="avaliacao-box">
-                          <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
-                          <strong>Francine, Assistente Virtual</strong>
-                      </div>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                  <div class="d-flex justify-content-center">
-                      <div class="avaliacao-box">
-                          <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
-                          <strong>David, Analista de Negócios</strong>
-                      </div>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                  <div class="d-flex justify-content-center">
-                      <div class="avaliacao-box">
-                          <p>Depoimentos são frases curtas das pessoas que gostam da sua marca. É uma ótima forma de convencer o público a experimentar seus serviços.</p>
-                          <strong>Bruna, Especialista em Marketing</strong>
-                      </div>
-                  </div>
-              </div>
+          <div class="col-md-4 d-flex justify-content-center">
+            <div class="avaliacao-box">
+              <p>
+                Depoimentos são frases curtas das pessoas que gostam da sua
+                marca. É uma ótima forma de convencer o público a experimentar
+                seus serviços.
+              </p>
+              <strong>David, Analista de Negócios</strong>
+            </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#avaliacoesCarousel" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Anterior</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#avaliacoesCarousel" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Próximo</span>
-          </button>
+          <div class="col-md-4 d-flex justify-content-center">
+            <div class="avaliacao-box">
+              <p>
+                Depoimentos são frases curtas das pessoas que gostam da sua
+                marca. É uma ótima forma de convencer o público a experimentar
+                seus serviços.
+              </p>
+              <strong>Bruna, Especialista em Marketing</strong>
+            </div>
+          </div>
+        </div>
       </div>
-  </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <!-- Versão para Mobile -->
+      <div
+        id="avaliacoesCarousel"
+        class="carousel slide mobile-view"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="d-flex justify-content-center">
+              <div class="avaliacao-box">
+                <p>
+                  Depoimentos são frases curtas das pessoas que gostam da sua
+                  marca. É uma ótima forma de convencer o público a experimentar
+                  seus serviços.
+                </p>
+                <strong>Francine, Assistente Virtual</strong>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-flex justify-content-center">
+              <div class="avaliacao-box">
+                <p>
+                  Depoimentos são frases curtas das pessoas que gostam da sua
+                  marca. É uma ótima forma de convencer o público a experimentar
+                  seus serviços.
+                </p>
+                <strong>David, Analista de Negócios</strong>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-flex justify-content-center">
+              <div class="avaliacao-box">
+                <p>
+                  Depoimentos são frases curtas das pessoas que gostam da sua
+                  marca. É uma ótima forma de convencer o público a experimentar
+                  seus serviços.
+                </p>
+                <strong>Bruna, Especialista em Marketing</strong>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#avaliacoesCarousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#avaliacoesCarousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Próximo</span>
+        </button>
+      </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <section id="sessao-final" class="section-dark" data-aos="fade-up">
       <div class="container contact-container">
