--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       </div>
     </section>
 
-    <section class="avaliacoes-section" data-aos="fade-up">
+    <section class="avaliacoes-section section-dark" data-aos="fade-up">
       <h2>Avaliações dos alunos</h2>
 
       <!-- Versão para Desktop -->
@@ -260,7 +260,7 @@
       <!-- Versão para Mobile -->
       <div
         id="avaliacoesCarousel"
-        class="carousel slide mobile-view"
+        class="carousel slide mobile-view section-dark"
         data-bs-ride="carousel"
       >
         <div class="carousel-inner">
