--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" href="src/assets/images/Icone2.jpg" type="image/jpeg" />
+    <link rel="icon" href="src/assets/images/IconeHead.png" type="image/jpeg" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -63,7 +63,7 @@
       <img src="src/assets/images/Icone.jpeg" alt="BTK Floresta Porto Alegre" />
     </header>
 
-    <section id="sobre-nos" class="section-light" data-aos="fade-up">
+    <section id="sobre-nos" class="section-light section-full" data-aos="fade-up">
       <div class="row justify-content-center font-branca">
         <div class="col-md-8 text-start">
           <h2 class="font-verde titulo-secao">Sobre nós</h2>
@@ -72,12 +72,12 @@
       <div class="row justify-content-center font-branca">
         <div class="col-md-4 text-start">
           <h3>Academia de Muaythai e Boxe é Btk-Floresta</h3>
-          <p>A Btk-Floresta foi fundada em janeiro de 2021.</p>
+          <p>Fundada em janeiro de 2021.</p>
+          <p>BTK-Floresta é referência em Muay Thai e Boxe, oferecendo uma estrutura completa para treinamento de alunos recreativos e atletas de competição.</p>
           <p>
-            Contamos com professores de alto nível para treinamento de alunos
-            recreativos e treinamento de atletas de competição.
+            Contamos com professores de alto nível, comprometidos em garantir o desenvolvimento técnico e físico de nossos alunos.
           </p>
-          <p>Academia de Muaythai, Academia de Boxe.</p>
+          <p>Venha treinar com a gente!</p>
           <img
             src="src/assets/images/btkin.jpg"
             class="d-block w-100"
@@ -100,35 +100,27 @@
 
     <section
       id="treinadores"
-      class="section-dark font-verde"
+      class="section-dark font-verde section-full"
       data-aos="fade-up"
     >
-      <h2>Treinadores</h2>
-      <div class="row justify-content-center">
-        <div class="col-md-4 text-center">
-          <h2>Thales Faller</h2>
-          <img
-            src="src/assets/images/ThalesFaller.jpg"
-            class="d-block w-100"
-            alt="Imagem 2"
-            class="img-fluid"
-            data-aos="fade-right"
-          />
+      <div class="row justify-content-center font-branca">
+        <div class="col-md-8 text-start">
+          <h2 class="font-verde titulo-secao">Treinadores</h2>
         </div>
-        <div class="col-md-4 text-center">
-          <h2>Matheus Pires</h2>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
           <img
-            src="src/assets/images/MatheusPires.jpg"
+            src="src/assets/images/Treinadores.jpg"
             class="d-block w-100"
             alt="Imagem 2"
             class="img-fluid"
-            data-aos="fade-left"
           />
         </div>
       </div>
     </section>
 
-    <section id="horarios" class="section-dark" data-aos="fade-up">
+    <section id="horarios" class="section-dark section-full" data-aos="fade-up">
       <div class="row justify-content-center font-branca">
         <div class="col-md-8 text-start">
           <h2 class="font-verde titulo-secao">Horários</h2>
@@ -145,7 +137,7 @@
       </div>
     </section>
 
-    <section hidden id="inscricao" class="section-light" data-aos="fade-down">
+    <section hidden id="inscricao" class="section-light section-full" data-aos="fade-down">
       <h2>Inscreva-se Agora</h2>
       <p>
         Preencha o formulário abaixo e comece sua jornada no Muay Thai hoje
@@ -193,7 +185,7 @@
       <p id="proximaAula" class="display-4"></p>
     </section>
 
-    <section id="como-chegar" class="section-light" data-aos="fade-up">
+    <section id="como-chegar" class="section-light section-full" data-aos="fade-up">
       <div class="row justify-content-center font-branca">
         <div class="col-md-8 text-start">
           <h2 class="font-verde titulo-secao">COMO CHEGAR</h2>
@@ -201,8 +193,14 @@
       </div>
       <div class="row justify-content-center font-branca">
         <div class="col-md-4 text-start">
-          <h3>Academia de Muaythai e Boxe é Btk-Floresta</h3>
-          <p>A Btk-Floresta foi fundada em janeiro de 2021.</p>
+          <p>A BtkFloresta é um espaço moderno e completo para prática de Muaythai e Kickboxing, localizado no bairro Floresta, Porto Alegre.</p>  
+
+<p>Nosso estabelecimento conta com um ambiente climatizado, ideal para treinos intensos em qualquer época do ano. Oferecemos vagas de estacionamento ao lado, garantindo comodidade e segurança para nossos alunos.</p>  
+
+<p>As aulas são ministradas por professores altamente qualificados, com equipamentos de alta qualidade e estrutura preparada para atender desde iniciantes até praticantes avançados. Aqui, você encontra tudo o que precisa para evoluir no esporte com segurança e eficiência.</p>  
+
+<p>Venha conhecer a BtkFloresta e experimente uma estrutura pensada para oferecer o melhor em treinamento de artes marciais.</p> 
+            <strong>BtkFloresta - Sua jornada começa aqui!</strong></p>
         </div>
         <div class="col-md-4">
           <iframe
@@ -218,7 +216,7 @@
       </div>
     </section>
 
-    <section class="avaliacoes-section section-dark" data-aos="fade-up">
+    <section hidden class="avaliacoes-section section-dark section-full" data-aos="fade-up">
       <h2>Avaliações dos alunos</h2>
 
       <!-- Versão para Desktop -->
@@ -260,7 +258,7 @@
       <!-- Versão para Mobile -->
       <div
         id="avaliacoesCarousel"
-        class="carousel slide mobile-view section-dark"
+        class="carousel slide mobile-view section-dark section-full"
         data-bs-ride="carousel"
       >
         <div class="carousel-inner">
@@ -324,14 +322,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <section id="sessao-final" class="section-dark" data-aos="fade-up">
+    <section id="sessao-final" class="section-dark section-full" data-aos="fade-up">
       <div class="container contact-container">
         <div class="row justify-content-center">
           <div class="col-md-4 text-center text-md-start" data-aos="fade-right">
             <!-- Telefone -->
             <h2 class="contact-title">Fale conosco</h2>
             <p class="contact-info">
-              <strong>TELEFONE:</strong> (51) 00000-0000
+              <strong>TELEFONE:</strong> (51) 98036-3094
             </p>
 
             <!-- E-mail -->
@@ -362,6 +360,13 @@
                 class="text-decoration-none"
               >
                 <i class="bi bi-tiktok"></i>
+              </a>
+              <a
+                href="https://api.whatsapp.com/send?phone=5180363094"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <i class="bi bi-whatsapp"></i>
               </a>
             </div>
           </div>
