--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <div class="social-icons contact-info">
               <h3>SOCIAL:</h3>
               <a
-                href="https://instagram.com/btkfloresta"
+                href="https://instagram.com/florestamuaythai"
                 target="_blank"
                 class="text-decoration-none"
               >
@@ -373,7 +373,7 @@
           <div class="col-md-8" data-aos="fade-left">
             <iframe
               class="d-block w-100"
-              src="https://www.instagram.com/btkfloresta/embed"
+              src="https://www.instagram.com/florestamuaythai/embed"
               frameborder="0"
               allowtransparency="true"
               allowfullscreen="true"
